--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="bottom">
                 <div class="location-details">
                     <h1>Bengaluru</h1>
                     <p>Wednesday</p>
